--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "chart.js": "^4.4.4",
+    "emailjs-com": "^3.2.0",
     "firebase": "^10.14.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "peerjs": "^1.5.4",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
